[package]
name = "tower-request-id-nano"
version = "0.1.0"
edition = "2021"
description = "A tower (hyper, axum, warp) service to add a unique id for every request"
keywords = ["tower", "hyper", "axum", "warp"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ciffelia/tower-request-id-nano"

[dependencies]
http = "1"
tower-layer = "0.3"
tower-service = "0.3"
ulid = "1"

[dev-dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["trace"] }
hyper = "1"
tracing = "0.1"
